--- a/source/_posts/前端other/_腾讯面试题.md
+++ b/source/_posts/前端other/_腾讯面试题.md
@@ -4,14 +4,17 @@
 
 
 1. [x] 合并两个数组
-2. [ ] 内存泄漏
+2. [x] 内存泄漏
+   1. 全局变量
+   2. 定时器未清除
+   3. 循环引用
 3. [ ] 闭包
 4. [ ] 面向对象理解
 5. [ ] 函数式编程理解
 6. [ ] 斐波那契数列？怎么优化？
 7. [x] http和https区别
 8. [x] https建立的过程
-9. [ ] 对微服务有什么了解？
+9.  [ ] 对微服务有什么了解？
 10. [ ] 从数组中找出三数之和为n
 
 
