add: 添加字符串切割方法对比

--- a/source/_posts/2-CSS相关/实现居中的四种方案.md
+++ b/source/_posts/2-CSS相关/实现居中的四种方案.md
@@ -23,9 +23,11 @@
 
 ## 1.1. absolute定位 + margin:auto
 
+缺点，一定要有个父元素
 
 <fieldset>
 <legend>代码看控制台</legend>
+
 
 <style>
 .postion.father {
@@ -52,11 +54,19 @@
 
 
 
+
+
+
+##  1.2. grid
+
 ## 1.2. 定位 + css3, transform
 
 
 定位属性的 top/left/right/bottom, 相对的都是 **容器的宽高**;
 transform属性的translate，相对的是 **元素自身宽高**;
+
+缺点，一定要有个父元素
+
 
 <fieldset>
 <legend>代码看控制台</legend>
