fix: 修改文件结构

--- a/source/_posts/5-项目复盘/工银-自动化报告.md
+++ b/source/_posts/5-项目复盘/工银-自动化报告.md
@@ -4,6 +4,10 @@
 2. 用户“点击退出编辑”+“组件卸载”, 都去调用解锁接口;
 
 
+## 表格可拖拽可伸缩
+
+1. 利用库
+
 ## word导出图片
 
 1. 遇到的问题: 服务部署在客户的虚拟机上，无法访问外网，而highchart提供的导出图片功能，需要再部署一套highchart node 服务，是需要访问外网，所以我们考虑使用 `puppeteer` 在node端绘图;
