--- a/source/_posts/2-CSS相关/实现居中的四种方案.md
+++ b/source/_posts/2-CSS相关/实现居中的四种方案.md
@@ -20,6 +20,32 @@
 </style>
 
 
+## 1.1. 定位 + css3, transform
+
+
+定位属性的 top/left/right/bottom, 相对的都是 **容器的宽高**;
+transform属性的translate，相对的是 **元素自身宽高**;
+
+<fieldset>
+<legend>代码看控制台</legend>
+
+<style>
+.css3.son {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+</style>
+
+<div class="css3 father">
+  <div class="css3 son">css3 son</div>
+</div>
+
+</fieldset>
+
+
+## 1.2. flex
 
 ## 1.1. absolute定位 + margin:auto
 
@@ -57,7 +83,7 @@
 
 
 
-##  1.2. grid
+##  1.3. grid
 
 ## 1.2. 定位 + css3, transform
 
@@ -109,6 +135,7 @@ transform属性的translate，相对的是 **元素自身宽高**;
   <div class="flex son">son</div>
 </div>
 </fieldset>
+
 
 
 
