fix: 打开几个隐藏文章

--- a/source/_posts/2-CSS相关/实现居中的四种方案.md
+++ b/source/_posts/2-CSS相关/实现居中的四种方案.md
@@ -20,79 +20,8 @@
 </style>
 
 
-## 1.1. flex
 
-
-
-<fieldset>
-<legend>代码看控制台</legend>
-
-<style>
-.flex.father {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-</style>
-
-<div class="flex father">
-  <div class="flex son">son</div>
-</div>
-</fieldset>
-
-
-
-
-
-##  1.2. grid
-
-
-<fieldset>
-<legend>代码看控制台</legend>
-
-<style>
-.grid.father {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-}
-</style>
-
-<div class="grid father">
-  <div class="grid son">son</div>
-</div>
-</fieldset>
-
-
-
-
-## 1.3. 定位 + css3, transform
-
-
-定位属性的 top/left/right/bottom, 相对的都是 **容器的宽高**;
-transform属性的translate，相对的是 **元素自身宽高**;
-
-<fieldset>
-<legend>代码看控制台</legend>
-
-<style>
-.css3.son {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-</style>
-
-<div class="css3 father">
-  <div class="css3 son">css3 son</div>
-</div>
-
-</fieldset>
-
-
-
-## 1.4. absolute定位 + margin:auto
+## 1.1. absolute定位 + margin:auto
 
 
 <fieldset>
@@ -117,6 +46,91 @@ transform属性的translate，相对的是 **元素自身宽高**;
 </div>
 
 </fieldset>
+
+
+
+
+
+
+## 1.2. 定位 + css3, transform
+
+
+定位属性的 top/left/right/bottom, 相对的都是 **容器的宽高**;
+transform属性的translate，相对的是 **元素自身宽高**;
+
+<fieldset>
+<legend>代码看控制台</legend>
+
+<style>
+.css3.son {
+  position: relative;
+  margin: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+</style>
+
+<div class="css3 father">
+  <div class="css3 son">css3 son</div>
+</div>
+
+</fieldset>
+
+
+
+
+## 1.3. flex
+
+
+
+<fieldset>
+<legend>代码看控制台</legend>
+
+<style>
+.flex.father {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+</style>
+
+<div class="flex father">
+  <div class="flex son">son</div>
+</div>
+</fieldset>
+
+
+
+
+
+##  1.4. grid
+
+
+<fieldset>
+<legend>代码看控制台</legend>
+
+<style>
+.grid.father {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+</style>
+
+<div class="grid father">
+  <div class="grid son">son</div>
+</div>
+</fieldset>
+
+
+
+
+
+
+
+
+
 
 
 
