--- a/source/_posts/1-JavaScript基础/防抖和节流.md
+++ b/source/_posts/1-JavaScript基础/防抖和节流.md
@@ -3,14 +3,14 @@
 => [测试地址](https://jsbin.com/rebucuputi/edit?html,css,output)
 
 
-提到防抖、节流，我们常常会背概念`高频事件在规定的时间只执行一次，如规定的时间内再次触发，则重新计算时间`, 背概念的缺点就是很容易虽然常用但是被问到就记混乱，其实知识的学习结合业务场景，思考其命名就很简单很多
+
 
 ## 防抖
 
 想象一个业务场景，根据用户input的输入进行查询数据，并将数据渲染出列表，如果我们在用户每次的onChange都查询，数据每次返回都去渲染列表，如果容器没有给固定宽高，那页面是不是就一直在抖动？
 这种处理方法，不仅用户体验效果差，同时浪费网络资源。
 
-这种场景下，产品经理又会希望这里的查询是实时的，那我们自然会想说，拉大没两次查询的间隔，那防抖的设计就应运而生了，
+这种场景下，产品经理又会希望这里的查询是实时的，那我们自然会想说，拉大每两次查询的间隔，那防抖的设计就应运而生了，
 
 
 如果规定一分钟，
