--- a/docs/设计模式/章3-闭包.mdx
+++ b/docs/设计模式/章3-闭包.mdx
@@ -3,10 +3,13 @@ sidebar_position: 10
 ---
 
 import CodeBlock from "@theme/CodeBlock";
+
 import Code from "!!raw-loader!./code/03-闭包/3.1.3-闭包-封装私有变量-缓存计算结果";
 import Code2 from "!!raw-loader!./code/03-闭包/01-闭包-延续局部变量寿命-image数据上报.js";
 import Code3 from "!!raw-loader!./code/03-闭包/3.1.4-闭包和面向对象设计.js";
 import Code4 from "!!raw-loader!./code/03-闭包/3.2.3-高阶函数实现AOP.js";
+import Code5 from "!!raw-loader!./code/03-闭包/3.2.4-高阶函数的其他应用-currying";
+import Code6 from "!!raw-loader!./code/03-闭包/3.2.4-高阶函数的其他应用-uncurrying";
 
 ## 3.1 闭包
 
@@ -20,7 +23,7 @@ import Code4 from "!!raw-loader!./code/03-闭包/3.2.3-高阶函数实现AOP.js"
 
 <CodeBlock language="js">{Code2}</CodeBlock>
 
-## 面向对象
+## 3.2 高阶函数
 
 :::note
 
@@ -35,6 +38,18 @@ import Code4 from "!!raw-loader!./code/03-闭包/3.2.3-高阶函数实现AOP.js"
 
 <CodeBlock language="js">{Code3}</CodeBlock>
 
-## 3.2.3-高阶函数实现 AOP
+### 3.2.3-高阶函数实现 AOP
 
 <CodeBlock language="js">{Code4}</CodeBlock>
+
+### 3.2.4-高阶函数的其他应用-currying
+
+<CodeBlock language="js">{Code5}</CodeBlock>
+
+### 3.2.4-高阶函数的其他应用-uncurrying
+
+<CodeBlock language="js">{Code6}</CodeBlock>
+
+### 3.2.4-高阶函数的其他应用-throttle
+
+[请查看 docs/手写类题目/节流](/docs/手写类题目/节流)
