--- a/docs/面经/我的面经.md
+++ b/docs/面经/我的面经.md
@@ -6,8 +6,8 @@
 ### 微盟一面
 
 1. [x] sass/less 有用过么？继承怎么做？
-2. [ ] 怎么拉别人远程分支代码？
-3. [ ] 对闭包的理解? 闭包的应用场景？
+2. [x] 怎么拉别人远程分支代码？
+3. [x] 对闭包的理解? 闭包的应用场景？
 4. [ ] 你说你熟悉浏览器，css是同步加载还是异步加载？css会阻塞渲染么？会阻塞解析么？
 5. [ ] 小程序生命周期有了解么？
    1. [ ] 如果我退出小程序，又进去，会触发哪个生命周期？
