--- a/docs/面经/我的面经.md
+++ b/docs/面经/我的面经.md
@@ -8,7 +8,10 @@
 1. [x] sass/less 有用过么？继承怎么做？
 2. [x] 怎么拉别人远程分支代码？
 3. [x] 对闭包的理解? 闭包的应用场景？
-4. [ ] 你说你熟悉浏览器，css是同步加载还是异步加载？css会阻塞渲染么？会阻塞解析么？
+4. [x] 你说你熟悉浏览器，css是同步加载还是异步加载？css会阻塞渲染么？会阻塞解析么？
+   1. 同步
+   2. 会阻塞渲染，因为layout树的构建，需要css；伪元素没有出现在dom树中，但是在layout树中; layout树是渲染到浏览器的上一步
+   3. 不会阻塞解析， 因为css不影响Dom树的构建; 比如，display:none, 对应的dom, 不会出现在layout树
 5. [ ] 小程序生命周期有了解么？
    1. [ ] 如果我退出小程序，又进去，会触发哪个生命周期？
 6. [ ] 浏览器存储方式有哪些？cookie有效期怎么设置？如果没设置有效期？
