fix: 修改我的面经

--- a/docs/面经/我的面经.md
+++ b/docs/面经/我的面经.md
@@ -34,15 +34,13 @@
 
 ### 微盟二面(2021-09-06)
 
-1. [ ] 一层数组，每个元素都有id, pid(代表其父级id),将其改为树层结构?
+1. [x] 一层数组，每个元素都有id, pid(代表其父级id),将其改为树层结构?
 2. [ ] 路径数组
 3. [ ] ts什么程度？
 4. [ ] 小程序技术选型为什么选Taro？
 5. [ ] react ref解决什么问题？
 6. [ ] react为什么要提供一个方法setState, 而不是直接修改状态?
 7. [ ] loader 和 plugin 的区别？
-
-
 
 
 
