--- a/docs/面经/我的面经.md
+++ b/docs/面经/我的面经.md
@@ -16,7 +16,7 @@
    1. [ ] 如果我退出小程序，又进去，会触发哪个生命周期？
 6. [ ] 浏览器存储方式有哪些？cookie有效期怎么设置？如果没设置有效期？
 7.  [x] 304
-8.  [ ] 口述了一个宏任务微任务的题目
+8.  [x] 口述了一个宏任务微任务的题目
 9.  [ ] es6常用方法有哪些？
 10. [ ] es5 和 es6 实现继承的方式
 11. [ ] react什么版本? hook方法有哪些？
