--- a/docs/面经/我的面经.md
+++ b/docs/面经/我的面经.md
@@ -17,18 +17,17 @@
 6. [ ] 浏览器存储方式有哪些？cookie有效期怎么设置？如果没设置有效期？
 7.  [x] 304
 8.  [x] 口述了一个宏任务微任务的题目
-9.  [ ] es6常用方法有哪些？
+9.  [x] es6常用方法有哪些？
 10. [ ] es5 和 es6 实现继承的方式
 11. [ ] react什么版本? hook方法有哪些？
-12. [ ] 什么场景使用useCallback?
-13. [ ] vue的nextTick
+12. [x] 什么场景使用useCallback?
+13. [x] vue的nextTick
 14. [ ] ts, interface 和 type什么区别?
-15. [ ] promise.all实现？
+15. [x] promise.all实现？
 16. [ ] 小程序双线程多线程(双线程)？
 17. [ ] webpack性能优化?
 18. [ ] plugin 和 loader区别？
 19. [ ] loader执行顺序？
-    1.  [ ] loader 和 plugin 的区别？
 
 
 
