--- a/docs/面经/我的面经.md
+++ b/docs/面经/我的面经.md
@@ -15,19 +15,38 @@
 5. [ ] 小程序生命周期有了解么？
    1. [ ] 如果我退出小程序，又进去，会触发哪个生命周期？
 6. [ ] 浏览器存储方式有哪些？cookie有效期怎么设置？如果没设置有效期？
-7.  [x] 304
+7.  [x] **304**
 8.  [x] 口述了一个宏任务微任务的题目
 9.  [x] es6常用方法有哪些？
 10. [ ] es5 和 es6 实现继承的方式
 11. [ ] react什么版本? hook方法有哪些？
 12. [x] 什么场景使用useCallback?
 13. [x] vue的nextTick
-14. [ ] ts, interface 和 type什么区别?
+14. [x] ts, interface 和 type什么区别?
+    1.  继承的方式
+    2.  type, 类型别名，可以声明为，`type A = string`, interface 一定是 key:value 形式
+    3.  ？报错好像不一样
 15. [x] promise.all实现？
-16. [ ] 小程序双线程多线程(双线程)？
+16. [x] 小程序双线程多线程？
+    1.  双线程
 17. [ ] webpack性能优化?
-18. [ ] plugin 和 loader区别？
-19. [ ] loader执行顺序？
+    1. dev
+       1. typescript, 利用tscheck另外开线程检查，节约编译事件
+       2. externals、dll, 减少编译事件
+       3. splitChunks, 分割代码块，减少编译事件
+       4. tree shaking, 利用tree shaking，减少编译事件
+    2. prod
+       1. m
+18. [x] plugin 和 loader区别？
+    1. loader
+       1. 本质上是导出为函数的JavaScript模块, loader runner会调用这个函数，然后将上一个函数的
+       2. loader的作用是把源码转换成目标码
+       3. 执行顺序是从右到左，从下到上
+    2. plugin是指插件
+       1. plugin执行顺序
+
+
+
 
 
 
