--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -18,8 +18,8 @@
 7.  [x] **304**
 8.  [x] 口述了一个宏任务微任务的题目
 9.  [x] es6常用方法有哪些？
-10. [ ] es5 和 es6 实现继承的方式
-11. [ ] react什么版本? hook方法有哪些？
+10. [x] es5 和 es6 实现继承的方式
+11. [x] react什么版本? hook方法有哪些？
 12. [x] 什么场景使用useCallback?
 13. [x] vue的nextTick
 14. [x] ts, interface 和 type什么区别?
