--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -56,7 +56,7 @@
 2. [ ] 路径数组
 3. [ ] ts什么程度？
 4. [ ] 小程序技术选型为什么选Taro？
-5. [ ] react ref解决什么问题？
+5. [x] react ref解决什么问题？
 6. [ ] react为什么要提供一个方法setState, 而不是直接修改状态?
 7. [ ] loader 和 plugin 的区别？
 
