--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -57,8 +57,8 @@
 3. [ ] ts什么程度？
 4. [ ] 小程序技术选型为什么选Taro？
 5. [x] react ref解决什么问题？
-6. [ ] react为什么要提供一个方法setState, 而不是直接修改状态?
-7. [ ] loader 和 plugin 的区别？
+6. [x] react为什么要提供一个方法setState, 而不是直接修改状态?
+7. [x] loader 和 plugin 的区别？
 
 
 
