--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -1,4 +1,43 @@
+
 # 我的面经
+
+## XTrsanfer
+
+1. [x] 自我介绍
+2. [x] 为什么离职？
+   1. [x] 想探索新的方向，现在前端方向也比较多，比如呢？
+3. [x] 是一毕业就做了前端么？项目经历框架侧重？
+4. [x] css实现居中？
+5. [x] 基本数据结构和引用数据结构的区别？
+6. [ ] 实现一个深拷贝怎么实现？引用类型怎么解决？
+   1. 他想听到weakMap
+7. [ ] 闭包
+   1. [ ] 闭包是什么？
+   2. [ ] 闭包有什么缺点么？
+   3. [ ] 应用场景？
+   4. [ ] 闭包占用的内存空间怎么清除呢？
+   5. [ ] gc？
+8. [ ] 有了解过浏览器的Eventloop么？
+   1. [ ] 为什么要提出微任务？只有宏任务不行么？
+9. [ ] node和浏览器的差异在哪里？
+10. [ ] 让你写一个Promise怎么实现？
+   1. [ ] all
+   2. [ ] race
+   3. [ ] allSettled
+11. [ ] 手写题，要求
+    1.  实现一个函数  返回不定参数的累乘calc（1，2，3） = 6
+    2.  对这个函数的结果实现缓存 对相同参数（顺序有可能不同）直接从缓存结果获取之
+    3.  LRU优化
+12. [ ] react
+    1. 对hooks的理解？
+    2. 对调度的理解？
+    3. `const [count, setCount] = useState(0)`, click事件中，`setTimeout(()=>setCount(count++),1)`, 持续点击，count值是多少？如果想让他更新怎么办？
+13. [ ] webpack有了解么？
+    1. [ ] 常用的插件？
+    2. [ ] 有做过哪些优化？
+14. [ ] 有什么问题要问我么？
+
+
 
 
 ## 微盟
