--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -11,12 +11,12 @@
 5. [x] 基本数据结构和引用数据结构的区别？
 6. [ ] 实现一个深拷贝怎么实现？引用类型怎么解决？
    1. 他想听到weakMap
-7. [ ] 闭包
-   1. [ ] 闭包是什么？
-   2. [ ] 闭包有什么缺点么？
-   3. [ ] 应用场景？
-   4. [ ] 闭包占用的内存空间怎么清除呢？
-   5. [ ] gc？
+7. [x] 闭包
+   1. [x] 闭包是什么？
+   2. [x] 闭包有什么缺点么？
+   3. [x] 应用场景？
+   4. [x] 闭包占用的内存空间怎么清除呢？
+   5. [x] gc？
 8. [ ] 有了解过浏览器的Eventloop么？
    1. [ ] 为什么要提出微任务？只有宏任务不行么？
 9. [ ] node和浏览器的差异在哪里？
