--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -17,25 +17,25 @@
    3. [x] 应用场景？
    4. [x] 闭包占用的内存空间怎么清除呢？
    5. [x] gc？
-8. [ ] 有了解过浏览器的Eventloop么？
-   1. [ ] 为什么要提出微任务？只有宏任务不行么？
-9. [ ] node和浏览器的差异在哪里？
-10. [ ] 让你写一个Promise怎么实现？
-   1. [ ] all
-   2. [ ] race
-   3. [ ] allSettled
-11. [ ] 手写题，要求
+8. [x] 有了解过浏览器的Eventloop么？
+   1. [x] 为什么要提出微任务？只有宏任务不行么？
+   2. [x] node和浏览器的差异在哪里？
+9.  [ ] 让你写一个Promise怎么实现？
+   3. [ ] all
+   4. [ ] race
+   5. [ ] allSettled
+10. [x] 手写题，要求
     1.  实现一个函数  返回不定参数的累乘calc（1，2，3） = 6
     2.  对这个函数的结果实现缓存 对相同参数（顺序有可能不同）直接从缓存结果获取之
     3.  LRU优化
-12. [ ] react
+11. [ ] react
     1. 对hooks的理解？
     2. 对调度的理解？
     3. `const [count, setCount] = useState(0)`, click事件中，`setTimeout(()=>setCount(count++),1)`, 持续点击，count值是多少？如果想让他更新怎么办？
-13. [ ] webpack有了解么？
+12. [ ] webpack有了解么？
     1. [ ] 常用的插件？
     2. [ ] 有做过哪些优化？
-14. [ ] 有什么问题要问我么？
+13. [ ] 有什么问题要问我么？
 
 
 
@@ -191,7 +191,7 @@
 
 ## 得物
 
-1. [ ] Eventloop介绍一下? 执行顺序？
+1. [x] Eventloop介绍一下? 执行顺序？
 2. [ ] vue生命周期的挂载顺序? 父子组件挂载在顺序？
 3. [ ] 浏览器缓存有了解么？
 4. [ ] 三次握手，四次挥手介绍一下？
