--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -4,20 +4,22 @@
 
 ## 花旗
 
+### 花旗一面
 
 1. [ ] 自我介绍
 2. [ ] react组件有几种？
 3. [ ] 想要销毁事件在哪里处理？
 4. [ ] fiber有了解么？
-5. [ ] 高阶组件有了解么？
-6. [ ] hooks是什么？和class组件相比解决了什么问题？
-7. [ ] hooks为什么是数组？
-8. [ ] 状态管理有使用过么？平时使用哪些状态管理？mbox, redux有用过么？
-9. [ ] 深浅拷贝？为什么？
-10. [ ] 拓展运算符是深还是浅拷贝？
-11. [ ] const生命对象，属性值是否可以修改？为什么？
-12. [ ] 常用的ES6的方法
-13. [ ] async await有用过么？底层实现有了解么？
+5. [ ] diff算法有了解么？
+6. [ ] 高阶组件有了解么？
+7. [ ] hooks是什么？和class组件相比解决了什么问题？
+8. [ ] hooks为什么是数组？
+9. [ ] 状态管理有使用过么？平时使用哪些状态管理？mbox, redux有用过么？
+10. [ ] 深浅拷贝？为什么？
+11. [ ] 拓展运算符是深还是浅拷贝？
+12. [ ] const生命对象，属性值是否可以修改？为什么？
+13. [ ] 常用的ES6的方法
+14. [ ] async await有用过么？底层实现有了解么？
 
 
 
