--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -41,6 +41,25 @@
 6. 懒加载？
 7. 性能优化？
 
+## 二面（笔试）
+1. 手写题，购物车，可以使用react/vue框架，不能使用UI框架
+
+## 二面
+
+1. 自我介绍
+2. 负责什么？做了什么工作？
+3. 为什么要重构？解决了什么问题？有什么改善？
+4. 闭包的理解？
+
+## 三面
+
+1. 自我介绍
+2. 为什么离职？
+3. 最大的优缺点？
+4. 未来的职业规划？
+5. 两家公司的团队规模、做的事情
+6. 薪资组成？
+
 ## 花旗
 
 ### 花旗一面
