--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -1,6 +1,33 @@
 
 # 我的面经
 
+
+
+## 携程二面
+
+1. [ ] Node.js的新/旧垃圾回收机制
+   1. [ ] 浏览器的也行
+2. [ ] Node.js的heapdump
+3. [ ] 页面性能通常关注哪些方面
+4. [ ] 浏览器有哪些进程？
+5. [ ] 怎么防止别人把我们的页面潜入iframe?
+6. [ ] 浏览器存储方式有哪些？
+   1. [ ] localStorage多大？
+   2. [ ] 超过最大限制能存进去么？
+   3. [ ] 不能存进去，会报错什么？
+   4. [ ] session, 可以跨tab共享么？
+   5. [ ] session多大？
+   6. [ ] cookie, 设置什么字段可以使前端无法访问？
+   7. [ ] http-only, 前端可以设置么？
+   8. [ ] http-only, 设置之后前端还能读取么？
+7. [ ] 事件发生顺序？
+   1. [ ] 怎么让事件在捕获阶段发生？
+   2. [ ] 设置了参数让事件在捕获阶段发生，还会在在冒泡阶段发生么？
+   3. [ ] 怎么阻止时间冒泡？
+8. [ ] EventLoop介绍下?
+   1. [ ] 处理宏任务的时候，又发生了微任务怎么办？
+9. [ ]
+
 ## 万得
 
 ### 一面
