--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -2,6 +2,19 @@
 # 我的面经
 
 
+## 米哈游一面（2022-08-03）
+
+1. [ ] 自我介绍
+2. [ ] class和hooks对比
+3. [ ] useCallback 和 useMemo 应用场景，区别
+4. [ ] useRef解决什么问题？
+5. [ ] Promise.all, Promise.race？
+   1. [ ] Promise.all， 一个失败，走到哪里？
+   2. [ ] 一个失败，其他还执行么？
+6. [ ] Promise 和 async优缺点，异同点
+7. [ ] 三个Promise, 第一个成功，第二个失败，第三个还能等到结果么？会走到catch么？
+8. [ ] axios封装
+
 
 ## 携程二面
 
