--- a/A-面经收纳/我的面经.md
+++ b/A-面经收纳/我的面经.md
@@ -23,24 +23,53 @@
    1. [ ] 浏览器的也行
 3. [ ] 做过Node.js的heapdump分析么？
 4. [ ] 浏览器渲染的时候，会启动几个进程？
-5. [ ] 页面性能通常关注哪些方面
-6. [ ] 怎么防止别人把我们的页面潜入iframe?
-7. [ ] 浏览器存储方式有哪些？
-   1. [ ] localStorage多大？
-   2. [ ] 超过最大限制能存进去么？
-   3. [ ] 不能存进去，会报错什么？
-   4. [ ] session, 可以跨tab共享么？
-   5. [ ] session多大？
-   6. [ ] cookie, 设置什么字段可以使前端无法访问？
-   7. [ ] http-only, 前端可以设置么？
-   8. [ ] http-only, 设置之后前端还能读取么？
-8. [ ] 事件发生顺序？
-   1. [ ] 怎么让事件在捕获阶段发生？
-   2. [ ] 设置了参数让事件在捕获阶段发生，还会在在冒泡阶段发生么？
-   3. [ ] 怎么阻止时间冒泡？
-9. [ ] EventLoop介绍下?
-   1. [ ] 处理宏任务的时候，又发生了微任务怎么办？
-10. [ ]
+5. [ ] 目前HTTP发展到哪个版本了？
+   1. [ ] http3主要是为了解决2的什么问题？
+   2. [ ] http2主要是为了解决1的什么问题？
+   3. [ ] TCP的阻塞是什么概念？
+6. [ ] 跨域解决方式有哪些？
+   1. [ ] JSONP
+   2. [ ] CORS 用过么？
+      1. [ ] options什么时候发起？
+      2. [ ] 是为了干嘛？
+      3. [ ] 简单请求，复杂请求？
+7. [ ] 怎么阻止别人通过iframe内嵌我们的网页?
+8. [ ] 浏览器客户端存储方式有哪些？
+   1. [ ] session
+      1. [ ] 可以跨tab共享么？
+      2. [ ] session多大？
+      3. [ ] 满了，新设置的回报错什么？
+   2. [ ] localStorage
+      1. [ ] 多大？
+      2. [ ] 可以跨tab共享么？
+      3. [ ] 满了，新设置的回报错什么？
+   3. [ ] cookie
+      1. [ ] 设置什么字段可以使前端无法访问？
+      2. [ ] http-only前端设置可以设置么？
+      3. [ ] 有效期相关
+         1. [ ] 关闭就没了？
+         2. [ ] 怎么手动设置有效期？
+9.  [ ] 事件发生顺序？
+   4.  [ ] 捕获-> 到达目标 -> 冒泡
+   5.  [ ] 怎么先冒泡？
+   6.  [ ] 设置了参数让事件在冒泡阶段发生，还会在捕获阶段在发生么？（大概是这个）
+   7.  [ ] 怎么阻止事件冒泡？
+10. [ ] EventLoop介绍下?
+   8.  [ ] 处理宏任务的时候，又发生了微任务怎么办？
+11. [ ] 页面性能
+    1.  [ ] 通常关注哪些指标？
+    2.  [ ] livehouse有哪些指标？
+    3.  [ ] DDR啥的？？（大概是这个）
+    4.  [ ] 内存泄漏，怎么排查？用户打开页面，页面崩溃，白屏
+12. [ ] css、js等静态资源文件的强缓存怎么设置？
+    1.  [ ] max-age 单位是什么？
+    2.  [ ] 所有的属性、属性值及其单位
+13. [ ] 怎么做SEO？
+14. [ ] 浏览器后退按钮会触发什么事件？
+15. [ ] 节流、防抖
+16. [ ] leetcode 刷了多少？
+17. [ ] 设计模式用过哪些？
+
 
 ## 万得
 
