--- a/浏览器/渲染.md
+++ b/浏览器/渲染.md
@@ -4,22 +4,17 @@
 css是同步加载还是异步加载？css会阻塞渲染么？会阻塞解析么？
 
 1. 同步加载的
-2. 不会阻塞解析: 因为css不影响DOM tree的构建; 比如，display:none, 对应的dom, 不会出现在layout树s
-3. 会阻塞渲染: 因为layout树的构建，需要css；伪元素没有出现在dom树中，但是在layout树中; layout树是渲染到浏览器的上一步s
+2. **不会阻塞解析**: 因为css不影响DOM tree的构建; 比如，display:none, 对应的dom, 不会出现在layout树s
+3. **会阻塞渲染**: 因为layout树的构建，需要css；伪元素没有出现在dom树中，但是在layout树中; layout树是渲染到浏览器的上一步s
 
 
 
 ## defer 和 async
 
-defer
-1. HTML4.01
-2. 立即下载，不阻塞，延迟执行
-3. 脚本会延迟到整个页面都解析完毕之后再运行（</html> ），
-4. 有序
-5. DOMContentLoaded 之前执行
-
-async
-1. HTML5
-2. 立即下载，不阻塞，延迟执行
-4. 无序
-5. onload事件之前，DOMContentLoaded 前后 执行
+|                  | defer                      | async                                 |
+|------------------|----------------------------|---------------------------------------|
+| 版本             | HTML4.01                   | HTML5                                 |
+| 阻塞             | 立即下载，不阻塞，延迟执行 | 立即下载，不阻塞，延迟执行            |
+| 执行时机         | `</html>`                  |                                       |
+| DOMContentLoaded | DOMContentLoaded 之前执行  | onload事件之前，DOMContentLoaded 前后 |
+| 有序否？         | 有序                       | 无序                                  |
