--- a/0-面经收纳/我的面经.md
+++ b/0-面经收纳/我的面经.md
@@ -8,10 +8,10 @@
 2. [ ] class和hooks对比
 3. [ ] useCallback 和 useMemo 应用场景，区别
 4. [ ] useRef解决什么问题？
-5. [ ] Promise.all, Promise.race？
-   1. [ ] Promise.all， 一个失败，走到哪里？
-   2. [ ] 一个失败，其他还执行么？
-6. [ ] Promise 和 async优缺点，异同点
+5. [x] Promise.all, Promise.race？
+   1. [x] Promise.all， 一个失败，走到哪里？-catch
+   2. [x] 一个失败，其他还执行么？-执行
+6. [x] Promise 和 async优缺点，异同点
 7. [ ] 三个Promise, 第一个成功，第二个失败，第三个还能等到结果么？会走到catch么？
 8. [ ] axios封装
 
