--- a/0-面经收纳/我的面经.md
+++ b/0-面经收纳/我的面经.md
@@ -2,6 +2,23 @@
 # 我的面经
 
 
+## bilibili一面（2020-09-13）
+
+1. [ ] 自我介绍
+2. [ ] 为什么考虑机会
+3. [ ] 为什么考虑B站？
+4. [ ] 有了解b站么？有同学在这里工作么？
+5. [ ]
+
+## 米哈游二面（2022-08-22）
+
+1. [ ] 自我介绍
+2. [ ] 最熟悉或者接触最多的技术栈
+3. [ ] 哪些项目是从零到一独自负责的
+4. [ ] 从零到一的项目，怎么设置数据通信的
+   1. [ ] 几种状态管理的优缺点、局限性（vuex、redux、saga）
+
+
 ## 米哈游一面（2022-08-03）
 
 1. [ ] 自我介绍
