--- a/0-面经收纳/我的面经.md
+++ b/0-面经收纳/我的面经.md
@@ -28,8 +28,13 @@
     1.  [ ] 目前有感觉不太舒服、流程，想改进的地方么？
 12. [ ] 组件库和工具库的维护，是什么组件？
 13. [ ] 前端的学习经历是怎样的？
-14. [ ] 现在的技术栈，react/vue, 吃的比较透的领域，简单讲一下
+14. [x] 现在的技术栈，react/vue, 吃的比较透的领域，简单讲一下
     1.  [ ] 我讲了fiber架构
+15. [ ] 算法
+    1.  [ ] 第一题忘记了，是一个简单的循环
+    2.  [ ] 构建二叉树（没做出来😭）
+    3.  [ ] 给定数组和目标值，给出所有和为目标值的组合可能
+    4.  [ ] 二叉树对称
 
 
 
