--- a/0-面经收纳/自我介绍.md
+++ b/0-面经收纳/自我介绍.md
@@ -1,20 +1,21 @@
-面试官您好，我叫李幸娟，2019年毕业到现在，一共有两家公司的工作经验；
+面试官您好，我叫李幸娟，2019年毕业于河南师范大学的物联网工程专业，本科毕业到现在，一共有两家公司的工作经历：
 
-第一家公司是上海汉得，主要做erp系统，包括费控、物资管理、保理系统等等。
-- 在这里一共做过四个项目，都比较类似，因为erp系统的页面主要是table和form。
-- 使用公司的自研框架HZero，大部分代码都是根据需求配置一个大的对象，对象中元素包含：字段、组件类型、组件的联动、表单编辑/禁用状态、页面初始化请求和保存请求等等。
+第一家公司是上海汉得，主要做erp系统:
+- 在这里一共做过四个项目，分别是碧桂园数据中台、黄河水电物资管理、嘉实基金费控、中远海运保理系统；
+- 技术栈react和vue都有使用，react多一些；
 
 
-第二家公司是通联数据，是一家互联网金融公司，
-- 我目前所在的团队是公司的萝卜投资SaaS团队，我主要负责行业类和资讯类模块的迭代开发，像行业景气预测、行业分析、研报、公告、综搜、垂搜等等模块的迭代开发；
-- 另外也有参与一些落地项目，大多都是从SaaS平台迁移出一些模块，加一些定制功能；也有遇到用Vue重写功能模块；
+第二家公司，也就是我现在所在的公司-通联数据，是一家互联网金融公司，
+- 我目前所在的团队是公司的SaaS团队，叫萝卜投资，我主要负责行业、个股、资讯类模块的迭代开发，像行业景气预测、行业分析、个股分析、研报、公告、综搜、垂搜等；
+- 另外也有参与一些落地项目；都是在SaaS的基础上做一些定制开发：
+  - 像工银自动化研报系统，主要是SaaS的研报编辑器;
+  - 腾安基金，将SaaS的研报、数据监控、指标库等功能用vue重写；
 - 另外也有参与维护混合云的迭代升级，
-<!-- - 混合云是公司的一个解决方案的尝试，后端的接口层区分公有云和私有云，前端只是针对不同公司部署不同版本的静态包，还有就是开发时候额外注意混合云兼容问题； -->
 
 
-我的技术栈是react, 也有做过几个vue项目、一个小程序项目，使用的框架是Taro;
+我的技术栈是react, 也有做过几个vue和小程序的项目；
 
-我的项目经历大概是这样。
+我的工作经历大概是这样；
 
 
 
