--- a/0-面经收纳/我的面经.md
+++ b/0-面经收纳/我的面经.md
@@ -1,3 +1,7 @@
+# 小米
+
+## 一面
+
 
 # 阿里巴巴本地生活
 
@@ -84,7 +88,7 @@
 
 
 
-## 米哈游一面（2022-08-03）
+## 一面（2022-08-03）
 
 1. [x] 自我介绍
 2. [x] class和hooks对比
@@ -100,7 +104,7 @@
 
 
 
-## 米哈游二面（2022-08-22）
+## 二面（2022-08-22）
 
 1. [x] 自我介绍
 2. [x] 最熟悉或者接触最多的技术栈
@@ -127,9 +131,9 @@
 # 携程
 
 
-## 携程一面
+## 一面
 
-## 携程二面
+## 二面
 
 1. [x] 自我介绍
 2. [x] Node.js, V8, 新生代/老生代垃圾回收机制是什么算法？
@@ -227,7 +231,7 @@
 
 # 花旗
 
-### 花旗一面
+## 花旗一面
 
 1. [ ] 自我介绍
 2. [ ] react组件有几种？
@@ -246,7 +250,9 @@
 
 
 
-## XTrsanfer
+# XTrsanfer
+
+## 一面
 
 1. [ ] 自我介绍
 2. [ ] 为什么离职？
@@ -285,9 +291,9 @@
 
 
 
-## 微盟
+# 微盟
 
-### 微盟一面
+## 一面
 
 1. [ ] sass/less 有用过么？继承怎么做？
 2. [ ] 怎么拉别人远程分支代码？
@@ -326,9 +332,7 @@
 
 
 
-
-
-### 微盟二面(2021-09-06)
+## 二面(2021-09-06)
 
 1. [x] 一层数组，每个元素都有id, pid(代表其父级id),将其改为树层结构?
 2. [ ] 路径数组
@@ -348,15 +352,16 @@
 
 
 
-## 爱回收
+# 爱回收
 
-### 爱回收一面
+## 一面
+
 1. [ ] react和vue有什么区别？
 2. [ ] fiber算法有了解么？
 3. [ ] webpack执行原理？
 
 
-### 爱回收二面(2021-09-06)
+## 二面(2021-09-06)
 
 
 五道手写题
@@ -387,12 +392,11 @@
 
 
 
-## 看B站的模拟面试
-
-1. useCallback 什么时候使用？使用目地是什么？什么时候不使用？
 
 
-## 平安金融壹账通
+# 平安金融壹账通
+
+## 一面、二面
 
 1. 还用过其他的网络请求库么？axios做了什么？
 2. state和getter有什么区别？
@@ -404,9 +408,9 @@
 
 
 
-## 申通快递
+# 申通快递
 
-### 申通一面
+## 一面
 
 
 1. [ ] 自我介绍
@@ -421,14 +425,17 @@
 
 
 
-### 申通二面(2021-09-06)
+## 二面(2021-09-06)
+
 1. [ ]
 
 
 
 
 
-## 得物
+# 得物
+
+## 一面
 
 1. [ ] Eventloop介绍一下? 执行顺序？
 2. [ ] vue生命周期的挂载顺序? 父子组件挂载在顺序？
@@ -444,7 +451,9 @@
 
 
 
-## 第一财经
+# 第一财经
+
+## 一面
 
 1. [ ] 输入url发生了什么？
 2. [ ] 怎么实现资源同步下载 --
@@ -487,8 +496,9 @@
 
 
 
-## B站
+# B站
 
+## 一面
 
 1. [ ] 如何实现串行/并行请求？
 2. [ ] 如何封装一个函数，实现可以无限次发起串行请求？不许用await, 要实现微任务的效果？
@@ -517,10 +527,11 @@
 
 
 
-## 通联数据
+# 通联数据
 （公司主要做react）
 
-(一)技术
+## 一面：技术
+
 1. 自我介绍
 2. 认为vue和react的区别
 3. vue3.0新特性有没有了解
@@ -530,27 +541,29 @@
 7. 了解哪些数据库？有什么区别？
 
 
-(二)技术总监+技术架构两个人
+## 二面：技术总监+技术架构两个人
+
 1. 自我介绍下
 2. 介绍其中一个项目业务流程
 3. 0.1+0.2 不等于 0.3的处理方法
 4. 数组常用的方法
 5. 对webpack的理解
-7. 怎么学前端的？看了什么书？
-8. 说几种设计模式？
-9. 深度遍历（我都没想起来是要我回答先中后序遍历）
-10. 看到你有写了两个自己的小项目，介绍下
-11. 链表和队列？广度优先遍历用的是队列还是链表？
-12. 至今你认为自己有什么亮点没讲到么？
+6. 怎么学前端的？看了什么书？
+7. 说几种设计模式？
+8. 深度遍历（我都没想起来是要我回答先中后序遍历）
+9.  看到你有写了两个自己的小项目，介绍下
+10. 链表和队列？广度优先遍历用的是队列还是链表？
+11. 至今你认为自己有什么亮点没讲到么？
    1. 我说我性格不错，另外因为做的外包，所以抗压能力比较强；
    2. 他就问，你怎么证明你的抗压能力强呢？
    3. 我说之前9117，压力巨大
    4. 她就说，那你认为是你能力的问题导致的么？
-13. 对金融有了解么？
-14. 自己的规划？
+12. 对金融有了解么？
+13. 自己的规划？
 
 
-(三)CEO面
+## 三面：CEO面
+
 1. 为什么选择我们公司
 2. 你认为我们是一个怎么样的公司
 3. 你认为自己有什么优势
@@ -567,7 +580,7 @@
 
 
 
-## 观安
+# 观安
 （公司主要做vue）
 1. 自我介绍
 2. 生命周期有哪些？
