fix: 复习中的一些修改

--- a/0-面经收纳/我的面经.md
+++ b/0-面经收纳/我的面经.md
@@ -49,7 +49,7 @@
 
 1. [x] 自我介绍
 2. [x] class有哪些生命周期
-3. [ ] 用hooks怎么实现生命周期
+3. [x] 用hooks怎么实现生命周期
 
 
 ## 二面
@@ -70,7 +70,7 @@
 ## 一面（2020-09-13）
 
 1. [x] 自我介绍
-2. [x] 为什么考虑机会
+2. [x] 为什么考虑机会？
 3. [x] 为什么考虑B站？
 4. [x] 有了解b站么？有同学在这里工作么？
 
