--- a/3-HTTP和浏览器/简单请求和复杂请求.md
+++ b/3-HTTP和浏览器/简单请求和复杂请求.md
@@ -2,7 +2,7 @@
 ## 简单请求
 
 以下5个条件，需要同时满足则是简单请求：
-1. 请求方法：get、head、post；
+1. 请求方法：get、post、head；
 2. 除了被用户代理自动设置的首部字段，人为设置的头字段只能有以下四个：
    1. accept
    2. accept-language
@@ -23,7 +23,7 @@
 
 ## 有效时间
 
-第一次发送这种类型的请求时会发起Option请求，该请求会缓存一段时间
+第一次发送这种类型的请求时会发起Options请求，该请求会缓存一段时间
 
 
 ## option请求携带头部
