--- a/4-webpack/优化实践.md
+++ b/4-webpack/优化实践.md
@@ -1,19 +1,30 @@
-前提，项目中 懒加载、公共vendor、代码分割都已经做过了
-
-## dev环境
-
-1. 增加react-refresh, 编译速度：6000-8000 => 2000-3000
-2. 测速度工具：speed-measure-webpack-plugin）
-3. 移`LodashModuleReplacementPlugin(去掉不需要的lodash函数)` 到 prod.js
-4. 增加 `ForkTsCheckerWebpackPlugin`: 为ts单独开启线程
-5. 开启`filesystem` cache
+## 开发环境编译速度优化
 
 
-<!-- 4. dll是项目中已经做过了的，将dependencies中的所有包都到了vender.dll,放在node_modules中 -->
+1. 增加`reach-refresh`: 提升开发体验，不需要全局刷新; 编译速度也有提升；
+2. 使用 webpackplugin speed-measure-webpack-plugin, 测速发现dev模式下，移`LodashModuleReplacementPlugin`，耗时过长，而他的作用是删除不需要的方法从而减小打包提示，所以是比较适合生产环境， 所以把它移动到了到 prod.js
+3. dll预编译：将devDenpences中所有依赖均使用dll进行打包；
+5. 手工升级，项目中之前有一个老的卡片的写法，处理方式是，将一个大的对象注册到window上，发现这边注释掉后，编译速度会一下到200-300ms, 所以这边是手工一个个改为组件的用法(背景：项目中原来就有计划，废弃卡片的写法，目前还有10几张，共50多个)；
+
+
+
+编译速度提升 6000-8000 => 2000-3000
+
+
+修改了卡片写法，目前项目dev编译速度500ms左右
+
+
+
+## 包体积优化
+
+1. 利用import的魔法注释，增加打包的可读性，并且通过阅读代码，抽离包公用部分
+2. 并存的不同版本的highcharts，作为技术任务，优先将使用react-highcharts的部分，改为echarts的写法，（背景：由于版权问题，项目中已经在逐渐将high-charts改写为echarts）
+
 
 
 
 ## 删除dead-code
 
-1. 工具: webpack-deadcode-plugin
-2. 代码行数: vscode-code-line 插件
+1. 分析工具: webpack-deadcode-plugin
+2. 代码行数统计工具: vscode-code-line 插件
+
