--- a/3-React/16.3和16.8.md
+++ b/3-React/16.3和16.8.md
@@ -1,7 +1,12 @@
 ## 16.3生命周期发生了什么变化
 
-1. 增加 `static getDerivedStateFromProps` 和 `getSnapshotBeforeUpdate`
-2. 三个生命周期加上了UNSAFE_，分别是`UNSAFE_componentWillMount`,`UNSAFE_componentWillReceiveProps`、`UNSAFE_componentWillUpdate`
+1. 增加2个生命周期：
+   1. `static getDerivedStateFromProps`
+   2. `getSnapshotBeforeUpdate`
+2. 2生命周期加上了`UNSAFE_`前缀：
+   1. `UNSAFE_componentWillMount`
+   2. `UNSAFE_componentWillReceiveProps`
+   3. `UNSAFE_componentWillUpdate`
 
 
 
