--- a/4-HTTP和浏览器/强缓存和协商缓存.md
+++ b/4-HTTP和浏览器/强缓存和协商缓存.md
@@ -11,13 +11,13 @@
 强缓存校验由以下两组字段控制：
 
 `cache-control` 字段: http1.1出现的字段，优先级更高，常用的字段值有：
-  1. `public`,  所有用户可以缓存
-  2. `private`, 仅客户端可缓存
+  1. `public`,  所有用户可以缓存；
+  2. `private`, 仅客户端可缓存；
   3. `no-cache`, 不使用强缓存， 使用协商缓存；不希望在没有经过服务器校验的前提下重用缓存，但是并不会阻止内容缓存；
   4. `no-store`, 强缓存和协商缓存均不使用；不希望内容缓存在任何位置，会阻止任何缓存，但是不会删除已经存储的内容；
-  5. `max-age`, 本地缓存的有效时间, (单位：秒)
+  5. `max-age`, 本地缓存的有效时间, (单位：秒)；
 
-`expires`: 具体时间点，http1.0出现的字段
+`expires`: 具体时间点，http1.0出现的字段；
 
 
 
