--- a/1-JS/闭包.md
+++ b/1-JS/闭包.md
@@ -1,9 +1,10 @@
 ## 什么是闭包？
 
-1. 闭包是一种**实现词法绑定**的函数式编程技术, 闭包在实现上是一个机构体，它存储了一个函数和一个词法作用域；
-2. 通常我们的实现方式是在一个函数中，返回一个嵌套函数，调用这个外部函数并赋值给一个变量A, 这个变量A持有的引用就叫做闭包；
-3. 闭包的特征是可以记住并且访问声明时所在的词法作用域，另外由于该变量A始终持有整个内部作用域，所以外部函数的函数作用域始终无法被垃圾回收；
-4. 闭包提供给我们隐藏内部实现细节的能力，通常开发中有很多应用：
+1. 闭包是一种**实现词法绑定**的函数式编程技术, 闭包在实现上是一个结构体，它存储了一个函数和一个词法作用域；
+2. 闭包的特征是可以记住并且访问声明时所在的词法作用域；
+3. 通常我们的实现方式是在一个函数中，返回一个嵌套函数，调用这个外部函数并赋值给一个变量A, 这个变量A持有的引用就叫做闭包；
+4. 另外由于该变量A始终持有整个内部作用域，所以外部函数的函数作用域始终无法被垃圾回收；
+5. 闭包提供给我们隐藏内部实现细节的能力，通常开发中有很多应用：
    1. 模块实现；
    2. <a href="./函数柯里化.js">函数柯里化</a>
    3. <a href="../7-设计模式/03-闭包/防抖.js">防抖</a>
