--- a/1-JS/闭包.md
+++ b/1-JS/闭包.md
@@ -6,10 +6,37 @@
 4. 另外由于该变量A始终持有整个内部作用域，所以外部函数的函数作用域始终无法被垃圾回收；
 5. 闭包提供给我们隐藏内部实现细节的能力，通常开发中有很多应用：
    1. 模块实现；
-   2. <a href="./函数柯里化.js">函数柯里化</a>
-   3. <a href="../7-设计模式/03-闭包/防抖.js">防抖</a>
-   4. <a href="../7-设计模式/03-闭包/节流.js">节流</a>
-   5. <a href="../7-设计模式/03-闭包/缓存计算结果memory.js">缓存计算结果</a>
+   2. <a href="../7-设计模式/03-闭包/防抖.js">防抖</a>
+   3. <a href="../7-设计模式/03-闭包/节流.js">节流</a>
+   4. <a href="../7-设计模式/03-闭包/缓存计算结果memory.js">缓存计算结果</a>
+   5. <a href="./函数柯里化.js">函数柯里化</a>
+   6. <a>计数器</a>
+
+
+```js
+/** 计数器 */
+function counter() {
+  let count = 0;
+  return {
+    add() {
+      count += 1;
+    },
+    sub() {
+      count -= 1;
+    },
+    get() {
+      return count;
+    },
+  };
+}
+
+let myCounter = counter();
+myCounter.add();
+console.log(myCounter.get());
+
+```
+
+
 
 
 
