--- a/7-设计模式/03-闭包/3.1.6-闭包与内存管理.md
+++ b/7-设计模式/03-闭包/3.1.6-闭包与内存管理.md
@@ -4,60 +4,51 @@
 2. 闭包有什么问题？
 3. 闭包怎么清除？
 4. 浏览器垃圾回收机制？
-6. 开发中可能存在的内存泄漏场景
-
+5. 开发中可能存在的内存泄漏场景
 
 ## 闭包有什么问题？
 
 1. 闭包是一个非常强大的特性，但是人们对闭包有一些误解。刚开始编程的时候，有人会告诉我说，闭包会造成内存泄漏，要尽量减少闭包的使用。
-2. 普通情况下，在函数退出的时候，局部变量就会解除引用，但是如果局部变量被保存在闭包所形成的环境中，这个变量就会一直存在。**一般闭包的形成, 是我们主动选择将该变量保存在闭包形成的环境中，便于之后的访问**，将变量保存在闭包中和挂载在全局作用域中，对内存的影响是一致的，并不能说成是内存泄漏，之后如果不再使用，手动设置为null 即可。
+2. 普通情况下，在函数退出的时候，局部变量就会解除引用，但是如果局部变量被保存在闭包所形成的环境中，这个变量就会一直存在。**一般闭包的形成, 是我们主动选择将该变量保存在闭包形成的环境中，便于之后的访问**，将变量保存在闭包中和挂载在全局作用域中，对内存的影响是一致的，并不能说成是内存泄漏，之后如果不再使用，手动设置为 null 即可。
 3. 跟闭包和内存泄漏有关的是**循环引用** , 现代浏览器的垃圾回收机制采用的都是**标记清除**，当一个变量的上下文被销毁，则改变变量会被打个标记未被引用，下次垃圾回收运行的时候，回收这些变量的内存空间。
-4. 同样要解决循环引用带来的内存泄漏问题，将变量设置为null即可，切断变量和他之前引用的值之间的连接。
+4. 同样要解决循环引用带来的内存泄漏问题，将变量设置为 null 即可，切断变量和他之前引用的值之间的连接。
 
-
-
-
-### 浏览器GC算法历史
+### 浏览器 GC 算法历史
 
 garbage-collection
 
-1. **标记清除**（现代浏览器的GC）
+1. **标记清除**（现代浏览器的 GC）
    1. 这种算法会定期遍历他所管理的内存空间，从若干根存储对象，查找与之相关的存储对象，标记其余的没有关联的存储对象，最后清除这些没有关联的存储对象。
 2. 引用计数（古早的浏览器，Netscape 和 IE）
-   1. 变量被访问时，计数器+1，变量解除引用时，计数器-1. 这种算法会定期检查，清除计数器为0的变量，并将该部分内存空间，归还给操作系统。
-
-
+   1. 变量被访问时，计数器+1，变量解除引用时，计数器-1. 这种算法会定期检查，清除计数器为 0 的变量，并将该部分内存空间，归还给操作系统。
 
 ## 内存泄漏是什么？
 
 内存泄漏是指，程序对内存管理失当，导致失去一段已经分配的内存空间的控制，导致内存空耗
 
-
-
 ## 开发中可能存在的内存泄漏场景？
-
 
 1. 意外声明的全局变量
 
 未提供声明符的变量会成为全局变量
 
 ```js
- function sayName(){
-   name = 'John';
- }
+function sayName() {
+  name = "John";
+}
 ```
 
-
 2. 定时器，未清除
+
 ```js
-const name = 'John';
+const name = "John";
 setInterval(() => {
- console.log(name)
+  console.log(name);
 }, 200);
 ```
 
-
 3. 闭包
+
 ```js
 function sayName() {
   const name = "John";
