--- a/2-CSS/元素居中四种方案.md
+++ b/2-CSS/元素居中四种方案.md
@@ -1,33 +1,58 @@
-
 ## 利用css3
 
 ```html
-<div id="pageContanier"></div>
+<div class="box1">
+  <div class="box2"></div>
+</div>
 ```
 
 ```css
-#pageContanier {
-  width: 80%;
-  height: 80%;
+.box1 {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+}
+.box2 {
+  width: 100px;
+  height: 100px;
   position: relative;
-  top: 50%;
+  top: 50%; /* relative设置top百分比是相对父元素 */
   left: 50%;
-  transform: translate(-50%, -50%); /* 50%为自身尺寸的一半 */
-  background-color: red;
+  background-color: pink;
+  transform: translate(-50%, -50%);/* 50%为自身尺寸的一半 */
 }
 ```
 
+## display:flex;
 
 
+```html
+<div class="box1">
+  <div class="box2"></div>
+</div>
+```
 
-
-
+```css
+.box1 {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.box2 {
+  width: 100px;
+  height: 100px;
+  background-color: pink;
+}
+```
 
 ## 利用top/left定位属性结合margin --- (1)
 
 利用 top/margin-top(负数)来实现居中
-- 缺点：必须已知块的 宽度和高度
 
+- 缺点：必须已知块的 宽度和高度
 
 ```html
   <div id="pageContanier"></div>
@@ -46,15 +71,6 @@
 }
 ```
 
-
-
-
-
-
-
-
-
-
 ## 利用top/left定位属性结合margin --- (2)
 
 利用 top/margin(auto)来实现居中
@@ -62,7 +78,6 @@
 ```html
   <div id="pageContanier"></div>
 ```
-
 
 ```css
 #pageContanier {
@@ -75,39 +90,5 @@
 + right: 0;
 + margin: auto;
   background-color: red;
-}
-```
-
-
-
-
-
-
-
-
-## display:flex;
-
-- 特点，要作用在有宽高的包裹元素上
-
-
-```html
-<div id="wrapper">
-  <div id="pageContanier"></div>
-</div>
-```
-
-```scss
-#wrapper {
-+ width: 500px;
-+ height: 500px;
-+ display: flex;
-+ justify-content: center;
-+ align-items: center;
-  background-color: green;
-  #pageContanier {
-+   width: 200px;
-+   height: 200px;
-    background-color: red;
-  }
 }
 ```
