--- a/0-收纳/我做过的项目.md
+++ b/0-收纳/我做过的项目.md
@@ -1,11 +1,15 @@
 # 汉得信息(2019-08)
 
-## 碧桂园
+## 碧桂园 碧合 2.0-SAP/ERP/MDG/业务中台实施项目
+
+2019.09 – 2019.11
 
 react + HZero,数据中台
 负责啥模块？我忘记了
 
-## 黄河水电
+## ⻩河水电 ERP 物资集约化平台实施项目
+
+2019.12 – 2020.1
 
 react, 出入库物资管理系统
 
@@ -19,16 +23,32 @@ vue
 vue
 费控系统-h5
 
-## 中远海运保理平台
+## 首创置业 商业租赁 ERP 实施项目 2020.02 – 2020.05
+
+• 员工移动端；移动端 H5：vue.js + vant (UI)；
+• 负责：根据业务需求开发 H5 页面，(费用、合同审评等审批类、投诉建议、销售数据上报等员工系统页面)
+担任前端负责人，协调产品、UI、后端工作和需求，规范项目结构；
+• 初次实际使用 vue 开发项目，该项目处于边学习边开发的状态；
+• 通过该项目锻炼了独立处理问题能力，以及帮助新员工快速熟悉项目、上手开发；
+
+## 中远海科 海汇保理实施项目 2020.05 – 至今
 
 vue, 保理系统,
 负责风控模块
+
+• 保理系统(供应链金融); PC 端: vue + element UI; 移动端: vue + vux;
+• 负责：资料管理、融资放款、风险审查等模块的开发工作；
+弹窗、审批流程记录等基础组件的封装；
+开发 node+ejs 脚本，用于快速生成 table/form，开发效率提高 30%；
+• 通过该项目对保理系统的整体架构有一定的了解；
+• vue 的使用熟练更加熟练，同时对 vue 的框架原理有了更好的理解；
+• 随着项目经验的增加，主动思考编写更易理解、易交接、性能更好的代码；
 
 # 通联数据(2020-08)
 
 ## 工商银行智能研报
 
-> 简介：一款在线协同编辑器, 客户是帮助研究院快速编写研报，
+> 简介：一款在线协同编辑器, 客户是帮助研究院快速编写研报；
 > 产品形态：分为 word 和 excel 两部分，我主要负责 word 部分的开发工作。word 部分，除了支持用户自由编写文本外，还另外配备一个素材库，包含：图片、要素、图表、报表等。编写完成后，研报支持分享给别人阅读、协同编辑、导出 word 文件。
 
 **技术栈**：React + TS, word 使用富文本编辑器 TinyMce；excel 使用 luckysheet；
@@ -51,7 +71,7 @@ vue, 保理系统,
 
 1. 需求大前提，要素（占位符）、图片、图表、表格这些要能正确导出，word 样式保持（字号、标题、图片宽高等等）
 2. 遇到问题 1: Highcharts 用配置导出图片，虽然 Highcharts 有提供支持的导出服务，帮我们完成导出，但是需要调用一个接口，而该服务是要部署在客户的内网，所以没办法调用；
-3. 在前面的前提下， 首先选择 node.js 服务，编写服务，调用后端接口获取数据，然后生成完成后，把文件二进制给到后端，后端吧文件二进制流给到前端，完成导出；具体实现上，node 服务先使用`Cheerio` 对发来的请求种的 html 解析，根据类型层层完成数据清洗，这个过程中最复杂的是图表，原来是数据，现在根据这些数据去请求完整数据，再使用 puppeteer 在服务端绘制成 chart, 再将绘制的 chart 导出为图片 base64 格式，最后作为 img 标签的 src 属性插入到 html。最后构建一个新的 html, html2word 导出 word 。
+3. 在前面的前提下， 首先选择 node.js 服务，编写服务，调用后端接口获取数据，然后生成完成后，把文件二进制给到后端，后端吧文件二进制流给到前端，完成导出；具体实现上，node 服务先使用 `Cheerio` 对发来的请求种的 html 解析，根据类型层层完成数据清洗，这个过程中最复杂的是图表，原来是数据，现在根据这些数据去请求完整数据，再使用 puppeteer 在服务端绘制成 chart, 再将绘制的 chart 导出为图片 base64 格式，最后作为 img 标签的 src 属性插入到 html。最后构建一个新的 html, html2word 导出 word 。
 
 - R-Result-结果
 
@@ -66,32 +86,32 @@ vue, 保理系统,
 
 **遇到的问题**: 导出页面，本来是内嵌 iframe, 导出，后来有权限问题,然后用了一个 dom, top 很多 px,隐藏掉
 
-## 腾安基金
+## 腾安基金-资管平台
 
-1. 项目背景
+> 项目背景:
+> 原来是在公司标品基础上二次开发，对方的技术栈为 vue, 而公司标品的技术栈为 react,
+> 临近交付的时候，对方感觉 react 不好维护，所以沟通后，重新使用他们的技术栈重写
+> 萝卜投资的两个功能-指标库和数据监控，使用 vue 重写
 
-   原来是在公司标品基础上二次开发，对方的技术栈为 vue, 而公司标品的技术栈为 react, 临近交付的时候，对方感觉 react 不好维护，所以沟通后，重新使用他们的技术栈重写
+- 技术栈
+  - vue-property-decorator
+  - vuex-property-decorator
 
-2. 项目介绍：
+功能:
+萝卜投资的 数据浏览器 + 指标库 1. 宏观研究: 问卷管理问卷调查 saataa 美林时钟 2. 权限管理: 比较特别，使用的是接口权限，判断功能权限
 
-   基于公司标准产品-萝卜投资的两个功能-指标库和数据监控，使用 vue 重写
+亮点: 外包同学 招聘&培训, 培训内容包括：
 
-3. 技术栈
-   vue-property-decorator
-   vuex-property-decorator
-4. 功能: 萝卜投资的 数据浏览器 + 指标库 1. 宏观研究: 问卷管理问卷调查 saataa 美林时钟 2. 权限管理: 比较特别，使用的是接口权限，判断功能权限
-5. 亮点: 外包同学 招聘&培训, 培训内容包括：
+1.  安全制度
+2.  技术, 主要 Typescript，还有所使用的新框架的培训
 
-   1. 安全制度
-   2. 技术, 主要 Typescript，还有所使用的新框架的培训
+3.  遇到的问题
+    element-UI select 组件，多选模式不支持修改 tag 的颜色
+    解决方案：在项目启动的时候，执行脚本，对 element-UI 编译后的源码，找到目标字符串，做替换，使其可以接收 class 属性
+4.  收获: 管理能力得到了锻炼
+5.  发现很多不足
 
-6. 遇到的问题
-   element-UI select 组件，多选模式不支持修改 tag 的颜色
-   解决方案：在项目启动的时候，执行脚本，对 element-UI 编译后的源码，找到目标字符串，做替换，使其可以接收 class 属性
-7. 收获: 管理能力得到了锻炼
-8. 发现很多不足
-
-   代码设计思维局限，总想着做了一个自给自足的大模块，只要接收外面的参数 + 执行交互的回调函数，外包项目因为是即时交付，后期没有迭代开发维护，所以没有发现问题，参与了迭代开发项目才知道，这种大模块又多难维护，稍微修改一处，会导致大面积崩盘，复用性就更别提了
+    代码设计思维局限，总想着做了一个自给自足的大模块，只要接收外面的参数 + 执行交互的回调函数，外包项目因为是即时交付，后期没有迭代开发维护，所以没有发现问题，参与了迭代开发项目才知道，这种大模块又多难维护，稍微修改一处，会导致大面积崩盘，复用性就更别提了
 
 ## Suzano
 
@@ -112,6 +132,21 @@ vue, 保理系统,
 3. 带新同学
    熟悉环境：公司规章制度、开发规范、开发流程、各种环境等
    技术：React+TypeScript
+
+## chatGPT，重写嵌入 react
+
+> 和 chatGPT 完全一样的功能，在他的基础上，出于成本考虑，用户同一时间仅允许一个对话
+
+我的亮点：
+
+1. 拉着后端，测试，一起进行流程设计
+2. 技术调研打字效果，为什么没有采用三方库
+   1. 内容是分段过来的，不好拼接
+   2. markdown 下，代码效果可能乱掉
+
+## AI 复盘
+
+> 项目概况：利用 GPT4 的信息处理功能，结合公司的新闻、研报、公告等数据优势，分析某段时间上涨下跌原因
 
 ## 萝卜投资(2021-10)
 
