--- a/0-收纳/自我介绍.md
+++ b/0-收纳/自我介绍.md
@@ -13,13 +13,14 @@
 
 ## 第二家公司是通联数据
 
-一体化智能投研平台，集成了个股、行业、基金、指标库、资讯、公告、研报、新闻、财报等全方位数据信息和分析功能,
+主营业务一体化智能投研平台，集成了个股、行业、基金、指标库、资讯、公告、研报、新闻、财报等全方位数据信息和分析功能,
 客户是一般有银行、证券、基金公司等，像招行、国泰证券、中金、淡马锡等；
 
 我在职期间，分为两个阶段：
-前期主要是在解决方案团队，在 SaaS 的基础上为客户做一些定制化需求；
-后面主要在 SaaS 团队，参与 SaaS 平台的迭代开发工作，我在职期间负责行业类、综合类、AIGC 类项目的开发；
-像行业景气预测、宏观框架、Copilot、AI 复盘
+
+- 前期主要是在解决方案团队，在 SaaS 的基础上为客户做一些定制化需求，服务过的客户有：淡马锡、腾安基金、招行等
+- 后期主要在 SaaS 团队，参与 SaaS 平台的迭代开发工作，我在职期间负责行业类、综合类、AIGC 类项目的开发；
+  像行业景气预测、宏观框架、Copilot、AI 复盘
 
 技术栈以 react 为主, 也有做过几个 Vue 和小程序的项目，项目类型都是 toB；
 
