--- a/0-收纳/职业规划.md
+++ b/0-收纳/职业规划.md
@@ -1,8 +1,10 @@
 # 职业规划
 
-短期内，希望能够深入了解公司的产品和服务，并成为团队的核心成员。计划利用公司听过的培训计划和导师计划来提升我的技术和管理能力，能够独立完成工作。
+短期内，希望能够深入了解公司的产品和服务，并成为团队的核心成员。计划利用公司提供的培训计划和导师计划来提升我的技术和管理能力，能够独当一面、完成工作。
 
-中长期来看，我希望能成长为项目领导者，管理重要的项目并为公司的战略目标作出共享。
+中长期来看，我希望能成长为项目领导者，管理重要的项目并为公司的战略目标作出贡献。
+
+另外，对于整个团队层面，我也希望能够使用我的过往经历，提供一些不一样的视角
 
 我对公司的创新技术上的重视非常感兴趣，我相信这将是一个发展我的职业生涯和实现个人职业目标的绝佳平台。
 
